# zqq-zentao-cli

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml  zentao.py
.cursor/rules/: git-commit.mdc
docs/: channel-matrix.md  cli-surface.md  handoff.md  zentao-apis.md  zentao-rest-apis.md  zentao-rest-apiv1.md  zentao-rest-apiv2.md  zentao-web-pathinfo.md
src/: __init__.py  __main__.py  bug_shape.py  capabilities.py  cli.py  config.py  confirm_util.py  factory.py  list_filter.py  list_stats.py  my_shape.py  output.py  payload.py  protocol.py  task_shape.py  user_resolve.py
src/cli_app/: __init__.py  body.py  capability.py  dispatch.py  fields.py  normalize.py  parser.py  write_dispatch.py
src/rest/: __init__.py  browse_filter.py  client.py  resources.py  resources_v2.py  session.py  tasks.py  v2_search.py  writes.py
src/services/: __init__.py  auth.py  browse.py  bugs.py  comments.py  my_pages.py  resources.py  stories.py  summary.py  task_options.py  tasks.py  testcases.py  testsuites.py  testtasks.py  todos.py
src/web/: __init__.py  bugs.py  client.py  comments.py  lists.py  my_pages.py  parse.py  session.py  tasks.py
tests/: test_api_version.py  test_browse_filter.py  test_bug_shape.py  test_capabilities.py  test_cli_options.py  test_list_filter.py  test_list_stats.py  test_my_pages.py  test_rest_tasks.py  test_summary.py  test_task_options.py  test_task_shape.py  test_user_resolve.py  test_web_bugs.py  test_web_tasks.py  test_writes.py
