[project]
name = "zqq-zentao-cli"
version = "0.1.0"
description = "ZenTao dual-backend CLI (Web Cookie PATHINFO / REST Token)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
zentao = "cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "config", "capabilities", "factory", "protocol"]
packages = ["web", "rest", "services"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["F", "E", "W"]
ignore = ["E501"]
