[project]
name = "zqq-zentao-cli"
version = "0.1.0"
description = "ZenTao dual-backend CLI (Web Cookie PATHINFO / REST Token)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
zqq-zentao = "zqq_zentao_cli.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "zqq_zentao_cli",
    "zqq_zentao_cli.web",
    "zqq_zentao_cli.rest",
    "zqq_zentao_cli.services",
]

[tool.setuptools.package-dir]
"zqq_zentao_cli" = "src"
"zqq_zentao_cli.web" = "src/web"
"zqq_zentao_cli.rest" = "src/rest"
"zqq_zentao_cli.services" = "src/services"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["F", "E", "W"]
ignore = ["E501"]
